<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">maimai updater</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">舞萌 DX 查分器 - 安卓数据更新器\n交流qq群：224548349\nby:bakapiano</string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">URL or local file path</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="username">Username</string>
    <string name="basic">Basic</string>
    <string name="password">Password</string>
    <string name="copy_url">复制链接</string>
    <string name="auto_launch">自动打开微信</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="master">Master</string>
    <string name="re_mas">Re:Mas</string>
    <string name="save">Save</string>
    <string name="start">start</string>
    <string name="chunithm">Chunithm</string>
    <string name="maimai_dx">maimai DX</string>
</resources>
